--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^18.2.0",
     "lucide-react": "^0.263.1",
     "react-router-dom": "^6.22.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "react-helmet-async": "^2.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
